# piiscan

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
changelog.d/: 20231103_214628_shane.rst
piiscan/: __init__.py  recognizer.py  scan.py  spacy_recognizer.py
piiscan/spacy_recognizer/: __init__.py
tests/: main.py
