[tool.poetry]
name = "piiscan"
version = "0.1.0"
description = "Easy, lightweight PII scanning for network requests and logs—powered by Microsoft Presidio and en_spacy_pii_fast"
authors = ["Shane Curran <shane@curran.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
