[tool.poetry]
name = "piiscan"
version = "0.1.1"
description = "Easy, lightweight PII scanning for network requests and logs—powered by Microsoft Presidio and en_spacy_pii_fast"
authors = ["Shane Curran <shane@curran.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
scriv = {extras = ["toml"], version = "^1.5.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
